--- a/Home.html
+++ b/Home.html
@@ -222,8 +222,8 @@
 
 						<video class="banner__video d-md-block d-none" 
 							muted="" autoplay="" loop="" 
-							data-banner-src="./Images/videomsc2022.mp4" 
-							src="./Images/videomsc2022.mp4">
+							data-banner-src="/Images/videomsc2022.mp4" 
+							src="/Images/videomsc2022.mp4">
 						</video>
 				
 			
