--- a/Home.html
+++ b/Home.html
@@ -213,7 +213,7 @@
 
 
 
-<div class="banner slick-initialized slick-slider p-0">
+<!-- <div class="banner slick-initialized slick-slider p-0">
 	<div class="slick-list draggable">
 		<div class="slick-track" style="opacity: 1; width: 2000px; transform: translate3d(0px, 0px, 0px);">
 			<div class="slick-slide slick-current slick-active" data-slick-index="0" aria-hidden="false" style="width: 2000px;">
@@ -232,8 +232,31 @@
 			</div>
 		</div>
 	</div>
-</div>
+</div> -->
+<div class="landingbanner landingbanner--">
+       <div class="landingbanner__item">
+                <div class="landingbanner__background d-none d-md-block" style="background-image: url(&#39;./Images/images_ioPEfz9iMJzp6PKrvGS6.png&#39;)">
+                </div>
 
+
+            <div class="landingbanner__image landingbanner__image--mobile d-block d-md-none" style="background-image: url(&#39;./Images/images_ioPEfz9iMJzp6PKrvGS6.png&#39;)">
+            </div>
+
+
+        <div class="landingbanner__content px-lg-0 px-2 px-md-4">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-7 col-12 landingbanner__content__text">
+                            <h1>
+                                
+                            </h1>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div> 
+    
+</div>
 
 <p class="sr-only" id="contentanchor"></p>
 
