--- a/Home.html
+++ b/Home.html
@@ -235,11 +235,11 @@
 </div> -->
 <div class="landingbanner landingbanner--">
        <div class="landingbanner__item">
-                <div class="landingbanner__background d-none d-md-block" style="background-image: url(&#39;./Images/images_ioPEfz9iMJzp6PKrvGS6.png&#39;)">
+                <div class="landingbanner__background d-none d-md-block" style="background-image: url(&#39;./Images/MSC_Zoe_(ship,_2015)_003.jpg&#39;)">
                 </div>
 
 
-            <div class="landingbanner__image landingbanner__image--mobile d-block d-md-none" style="background-image: url(&#39;./Images/images_ioPEfz9iMJzp6PKrvGS6.png&#39;)">
+            <div class="landingbanner__image landingbanner__image--mobile d-block d-md-none" style="background-image: url(&#39;./Images/MSC_Zoe_(ship,_2015)_003.jpg&#39;)">
             </div>
 
 
