Fixed search button

--- a/Precensia.html
+++ b/Precensia.html
@@ -95,14 +95,14 @@
                         </ul>
                     </section>
                     <ul class="topnav__list">
-                        <li class="topnav__item">
+                        <!-- <li class="topnav__item">
                             <a href="javascript:;" class="topnav__link topnav__searchButton">
                                 <svg class="icon topnav__searchIcon">
                                     <use xlink:href="#icon-search"></use>
                                 </svg>
                                 <span>Search</span>
                             </a>
-                        </li>
+                        </li> -->
                         <li class="topnav__item ml-3 ml-md-5">
                             <a href="javascript:;" class="topnav__link topnav__menuButton">
                                 <span>Menu</span>
@@ -113,7 +113,7 @@
                         </li>
                     </ul>
                     <div class="search">
-        <form action="https://grosvenor.com/search" method="get">                    <label for="headersearchbartext" class="visually-hidden">Search</label>
+        <!-- <form action="https://grosvenor.com/search" method="get">                    <label for="headersearchbartext" class="visually-hidden">Search</label>
                             <input id="headersearchbartext" type="text" name="searchtext" placeholder="Search" class="search__input">
                             <a class="search__closeButton">
                                 <svg class="icon search__closeIcon">
@@ -124,7 +124,7 @@
                                 <svg class="icon search__searchIcon">
                                     <use xlink:href="#icon-search"></use>
                                 </svg>
-                            </a>
+                            </a> -->
         </form>            </div>
                 </div>
             </nav>
