Mobile friendly changes 4

--- a/Ventajas.html
+++ b/Ventajas.html
@@ -422,7 +422,7 @@ Siguiendo esta filosofía de vida MSC ha superado grandes retos y llegado a mant
 
 
 <a class="imageandcontentwidget textcolour--white imageandcontentwidget--standard imageandcontentwidget--fiftyfifty">
-	<div class="site-container">
+	<div class="site-container" style="background-color:rgb(24,63,136);">
 		<div class="imageandcontentwidget__inner">
 			<div class="imageandcontentwidget__inner__imagecolumn">
 				<div class="imageandcontentwidget__inner__imagecolumn__image" style="border-radius: 0%;background-color:rgb(24,116,193)">
