--- a/Home.html
+++ b/Home.html
@@ -730,6 +730,13 @@ Championing climate action with our global carbon commitment                    
         }
     }
 
+    @media (max-width: 288px) {
+        .tab-button {
+            font-size: 11px; /* Even smaller font size for mobile phones */
+            padding: 8px 10px; /* Adjust padding for very small screens */
+        }
+    }
+
     @keyframes fadeIn {
         from { opacity: 0; }
         to { opacity: 1; }
