--- a/Aduanas.html
+++ b/Aduanas.html
@@ -225,7 +225,7 @@
 
             <!-- <div class="landingbanner__image landingbanner__image--mobile d-block d-md-none" style="background-image: url(&#39;./Images/aduanasbruh.jpg&#39;)">
             </div> -->
-            <div class="landingbanner__image landingbanner__image--mobile d-block d-md-none" style="background-image: url('./Images/aduanasbruh.jpg'); background-size: 350%;background-position:left">
+            <div class="landingbanner__image landingbanner__image--mobile d-block d-md-none" style="background-image: url('./Images/aduanasbruh.jpg'); background-size: 400%;background-position:left">
             </div>
             
 
@@ -233,9 +233,9 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-7 col-12 landingbanner__content__text">
-                            <h1 style="transform: translateX(100px);">
+                            <!-- <h1 style="transform: translateX(100px);">
                                 Aduanas
-                            </h1>
+                            </h1> -->
                     </div>
                 </div>
             </div>
