aduanas img fix

--- a/Aduanas.html
+++ b/Aduanas.html
@@ -225,7 +225,12 @@
 
             <!-- <div class="landingbanner__image landingbanner__image--mobile d-block d-md-none" style="background-image: url(&#39;./Images/aduanasbruh.jpg&#39;)">
             </div> -->
-            <div class="landingbanner__image landingbanner__image--mobile d-block d-md-none" style="background-image: url('./Images/aduanasbruh.jpg'); background-size: 400%;background-position:left">
+            <div class="landingbanner__image landingbanner__image--mobile d-block d-md-none" style="
+                    background-image: url('./Images/aduanasbruh.jpg'); 
+                    background-size: cover;
+                    background-position: center; 
+                    height: 100vh; /* Adjust the height as needed */
+                    width: 100vw;">
             </div>
             
 
