--- a/Aduanas.html
+++ b/Aduanas.html
@@ -229,7 +229,7 @@
                     background-image: url('./Images/aduanasbruh.jpg'); 
                     background-size: cover;
                     background-position: center; 
-                    height: 100vh; /* Adjust the height as needed */
+                    height: auto; /* Adjust the height as needed */
                     width: 100vw;">
             </div>
             
