--- a/Aduanas.html
+++ b/Aduanas.html
@@ -34,9 +34,10 @@
 <meta name="msapplication-TileImage" content="/assets/favicons/ms-icon-144x144.png">
 <meta name="theme-color" content="#ffffff">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
+
 <link rel="stylesheet" href="./CSS/main.min.css">
 
-    
 
 
 
