--- a/Aduanas.html
+++ b/Aduanas.html
@@ -562,7 +562,7 @@
       "themeColor": "#2563eb"
   });
 </script> 
-<!-- <script>
+<script>
     document.addEventListener('contextmenu', function(e) {
       e.preventDefault();
     });
@@ -583,6 +583,6 @@
         return false;
       }
     };    
-</script>  -->
+</script> 
 </body>
 </html>
