--- a/Home.html
+++ b/Home.html
@@ -1221,7 +1221,7 @@ Championing climate action with our global carbon commitment                    
       "themeColor": "#2563eb"
   });
 </script>  
-<!-- <script>
+<script>
 document.addEventListener('contextmenu', function(e) {
   e.preventDefault();
 });
@@ -1242,6 +1242,6 @@ document.onkeydown = function(e) {
     return false;
   }
 };
-</script> -->
+</script>
 </body>
 </html>
