--- a/Ventajas.html
+++ b/Ventajas.html
@@ -507,8 +507,8 @@ Siguiendo esta filosofía de vida MSC ha superado grandes retos y llegado a mant
     <div class="site-container">
 		<div class="parallaximagewithcontent__container js--parallaximagewithcontent " style="min-height: 898px;">
             <div class="parallaximagewithcontent__clippingcontainer">
-                <img class="parallaximagewithcontent__backgroundimage" alt="Rural Estate Management" src="./Images/agregado.webp">
-                <img class="parallaximagewithcontent__imageforscale" alt="Rural Estate Management" src="./Images/agregado.webp">
+                <img class="parallaximagewithcontent__backgroundimage" style="transform:scale(1);filter: contrast(45%);" alt="Rural Estate Management" src="./Images/glass_window_people_computers3 (2).png">
+                <img class="parallaximagewithcontent__imageforscale" style="transform:scale(1)" alt="Rural Estate Management" src="./Images/glass_window_people_computers3 (2).png">
             </div>
 			<div tabindex="0" class="parallaximagewithcontent__contentWrap  textcolor--white" style="background-color:#031b41">
                 <div class="parallaximagewithcontent__content pt-5 pr-2 pb-2 pl-3 pt-md-7 pr-md-6 pl-md-6">
@@ -534,7 +534,7 @@ Siguiendo esta filosofía de vida MSC ha superado grandes retos y llegado a mant
 						<div class="contentlisting__card" style="">
 
 
-								<div class="contentlisting__card__image mb-3" style="background-image:url(&#39;./Images/inspection.webp&#39;)">
+								<div class="contentlisting__card__image mb-3" style="background-image:url(&#39;./Images/inspection.png&#39;)">
 								</div>
 
 
@@ -822,7 +822,7 @@ Siguiendo esta filosofía de vida MSC ha superado grandes retos y llegado a mant
       "themeColor": "#2563eb"
   });
 </script>  
-<script>
+<!-- <script>
     document.addEventListener('contextmenu', function(e) {
       e.preventDefault();
     });
@@ -843,6 +843,6 @@ Siguiendo esta filosofía de vida MSC ha superado grandes retos y llegado a mant
         return false;
       }
     };
-    </script>
+    </script> -->
 </body>
 </html>
