--- a/Home.html
+++ b/Home.html
@@ -989,8 +989,9 @@ Championing climate action with our global carbon commitment                    
                                 </div> -->
                                 <div class="tabs">
                                     <div class="tab-buttons">
-                                      <button class="tab-button active" onclick="openTab(event, 'general')">Información General</button>
+                                      
                                       <button class="tab-button" onclick="openTab(event, 'vision')">Filosofia</button>
+                                      <button class="tab-button active" onclick="openTab(event, 'general')">Información General</button>
                                       <button class="tab-button" onclick="openTab(event, 'customs')">Aduanas</button>
                                     </div>
                                     
@@ -1405,7 +1406,7 @@ Championing climate action with our global carbon commitment                    
       "themeColor": "#2563eb"
   });
 </script>  
-<!-- <script>
+<script>
 document.addEventListener('contextmenu', function(e) {
   e.preventDefault();
 });
@@ -1426,6 +1427,6 @@ document.onkeydown = function(e) {
     return false;
   }
 };
-</script> -->
+</script>
 </body>
 </html>
