--- a/Certificaciones.html
+++ b/Certificaciones.html
@@ -293,7 +293,7 @@
 
 
 
-		<div class="grosvenorrichtext fr-view mt-md-5 mt-3 mb-3 mt-md-5" style="background-color: #08949e;padding-top:50px;padding-bottom:50px">
+		<div class="grosvenorrichtext fr-view mb-3" style="background-color: #08949e;padding-top:50px;padding-bottom:50px">
 			<div class="container">
 				<div class="row">
 					<div class="col-12 col-md-8 pr-md-6">
