--- a/Certificaciones.html
+++ b/Certificaciones.html
@@ -251,9 +251,10 @@
 
 <div class="landingbanner">
     <div class="landingbanner__item">
-         <video class="banner__video d-md-block d-none" muted="" autoplay="" loop="" 
-         data-banner-src="https://firebasestorage.googleapis.com/v0/b/mscwebsite-c49af.appspot.com/o/videomsc2022.mp4?alt=media&token=66a56a46-666b-4e33-9dfc-08a07560b260" 
-         src="https://firebasestorage.googleapis.com/v0/b/mscwebsite-c49af.appspot.com/o/videomsc2022.mp4?alt=media&token=66a56a46-666b-4e33-9dfc-08a07560b260"></video>
+        <video class="banner__video d-md-block d-none" muted autoplay loop playsinline
+        src="https://firebasestorage.googleapis.com/v0/b/mscwebsite-c49af.appspot.com/o/videomsc2022.mp4?alt=media&token=66a56a46-666b-4e33-9dfc-08a07560b260">
+        </video>
+    
     </div> 
     
 </div>
