--- a/Certificaciones.html
+++ b/Certificaciones.html
@@ -294,7 +294,7 @@
 
 
 
-		<div class="grosvenorrichtext fr-view mb-3" style="background-color: #08949e;padding-top:50px;padding-bottom:50px">
+		<div class="grosvenorrichtext fr-view " style="background-color: #08949e;padding-top:50px;padding-bottom:50px">
 			<div class="container">
 				<div class="row">
 					<div class="col-12 col-md-8 pr-md-6">
