--- a/Home.html
+++ b/Home.html
@@ -289,7 +289,8 @@
     <div class="video-container"><video class="banner__video d-md-block d-none" muted autoplay loop playsinline
         src="https://firebasestorage.googleapis.com/v0/b/mscwebsite-c49af.appspot.com/o/videomsc2022.mp4?alt=media&token=66a56a46-666b-4e33-9dfc-08a07560b260"
         type="video/mp4">
-        </video></div>
+        </video>
+    </div>
     
 </div>
 
@@ -311,7 +312,7 @@
                                     </picture>
                                 </div>
 
-                                <div class="pt-5 pr-2 pb-2 pl-3 pt-md-7 pr-md-6 pl-md-6">
+                                <div class="p   t-5 pr-2 pb-2 pl-3 pt-md-7 pr-md-6 pl-md-6">
                                     <h3>
                                         TRÁFICO AÉREO							
                                     </h3>
@@ -1441,7 +1442,7 @@ Championing climate action with our global carbon commitment                    
       "themeColor": "#2563eb"
   });
 </script>  
-<script>
+<!-- <script>
 document.addEventListener('contextmenu', function(e) {
   e.preventDefault();
 });
@@ -1462,6 +1463,6 @@ document.onkeydown = function(e) {
     return false;
   }
 };
-</script>
+</script> -->
 </body>
 </html>
