--- a/Home_copy2.html
+++ b/Home_copy2.html
@@ -337,30 +337,42 @@
 
 
 
-<div class="banner slick-initialized slick-slider"><div class="slick-list draggable"><div class="slick-track" style="opacity: 1; width: 1349px; transform: translate3d(0px, 0px, 0px);"><div class="slick-slide slick-current slick-active" data-slick-index="0" aria-hidden="false" style="width: 1349px;"><div><div class="banner__item textcolour--white" style="width: 100%; display: inline-block;">
+<div class="banner slick-initialized slick-slider">
+	<div class="slick-list draggable">
+		<div class="slick-track" style="opacity: 1; width: 1349px; transform: translate3d(0px, 0px, 0px);">
+			<div class="slick-slide slick-current slick-active" data-slick-index="0" aria-hidden="false"
+				style="width: 1349px;">
+				<div>
+					<div class="banner__item textcolour--white" style="width: 100%; display: inline-block;">
 
-				<video class="banner__video d-md-block d-none" muted="" autoplay="" loop="" data-banner-src="https://grosvenorlive.b-cdn.net/live/grosvenor/media/homepagebannersvideos/grosvenor_web-film.mp4?ext=.mp4" src="https://grosvenorlive.b-cdn.net/live/grosvenor/media/homepagebannersvideos/grosvenor_web-film.mp4?ext=.mp4">
+						<video class="banner__video d-md-block d-none" muted="" autoplay="" loop="" data-banner-src="https://grosvenorlive.b-cdn.net/live/grosvenor/media/homepagebannersvideos/grosvenor_web-film.mp4?ext=.mp4" src="https://grosvenorlive.b-cdn.net/live/grosvenor/media/homepagebannersvideos/grosvenor_web-film.mp4?ext=.mp4">
 				</video>
-                <div class="banner__image d-md-none d-block">
-                    <picture>
-                        <img alt="Welcome to Grosvenor" src="./Home_copy2_files/homepage-website-mobile-banner.jpg">
-                    </picture>
-                </div>
-            <div class="banner__content px-lg-0 px-4">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-md-7 col-12">
-                            <div class="d-md-none ">
-                                <h1>
-                                    Welcome to Grosvenor
-                                </h1>
+						<div class="banner__image d-md-none d-block">
+							<picture>
+								<img alt="Welcome to Grosvenor"
+									src="./Home_copy2_files/homepage-website-mobile-banner.jpg">
+							</picture>
+						</div>
+						<div class="banner__content px-lg-0 px-4">
+							<div class="container">
+								<div class="row">
+									<div class="col-md-7 col-12">
+										<div class="d-md-none ">
+											<h1>
+												Welcome to Grosvenor
+											</h1>
 
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div></div></div></div></div></div>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
 <p class="sr-only" id="contentanchor"></p>
 
 <div>
