--- a/Home.html
+++ b/Home.html
@@ -272,44 +272,49 @@
   .video-container video {
     min-height: 830px; /* Ensure the video matches the container height */
   }
+  
 }
 
   </style>
 <div class="banner slick-initialized slick-slider">
-	<div class="slick-list draggable">
-		<div class="slick-track" style="opacity: 1; width: 100%; transform: translate3d(0px, 0px, 0px);">
-			<div class="slick-slide slick-current slick-active" data-slick-index="0" aria-hidden="false"
-				style="width: 100%;">
-				<div>
-					<div class="banner__item textcolour--white" style="width: 100%; display: inline-block;">
+    <div class="slick-list draggable">
+        <div class="slick-track" style="opacity: 1; width: 100%; transform: translate3d(0px, 0px, 0px);">
+            <div class="slick-slide slick-current slick-active" data-slick-index="0" aria-hidden="false"
+                style="width: 100%;">
+                <div>
+                    <div class="banner__item textcolour--white" style="width: 100%; display: inline-block;">
 
-						<!-- <video class="banner__video d-md-block d-none" muted="" autoplay="" loop="" data-banner-src="https://grosvenorlive.b-cdn.net/live/grosvenor/media/homepagebannersvideos/grosvenor_web-film.mp4?ext=.mp4" src="https://grosvenorlive.b-cdn.net/live/grosvenor/media/homepagebannersvideos/grosvenor_web-film.mp4?ext=.mp4">
-				</video> -->
-						<div class="banner__image d-block">
+						<video class="banner__video d-md-block d-none" muted="" autoplay="" loop="" 
+                        data-banner-src="https://firebasestorage.googleapis.com/v0/b/mscwebsite-c49af.appspot.com/o/videomsc2022.mp4?alt=media&token=66a56a46-666b-4e33-9dfc-08a07560b260"
+                         src="https://firebasestorage.googleapis.com/v0/b/mscwebsite-c49af.appspot.com/o/videomsc2022.mp4?alt=media&token=66a56a46-666b-4e33-9dfc-08a07560b260">
+				</video>
+						<div class="banner__image d-md-none d-block">
 							<picture>
 								<img alt="Welcome to Grosvenor"
 									src="./Home_copy2_files/homepage-website-mobile-banner.jpg">
 							</picture>
-                            <img alt="Welcome to Grosvenor"
-									src="./Home_copy2_files/homepage-website-mobile-banner.jpg">
 						</div>
-						<div class="banner__content px-lg-0 px-4" style="padding: 0%;">
+						<div class="banner__content px-lg-0 px-4">
 							<div class="container">
 								<div class="row">
 									<div class="col-md-7 col-12">
-										<div style="display: flex; justify-content: center; align-items: center; height: 100vh;">
-                                            <h1>Bienvenidos a Muris Salinas Consultores</h1>
-                                        </div>
+										<div class="d-md-none ">
+											<h1>
+												Bienvenidos a Muris Salinas Consultores
+											</h1>
+
+										</div>
 									</div>
 								</div>
 							</div>
 						</div>
 					</div>
-				</div>
-			</div>
-		</div>
-	</div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
+
 
 <!-- <p class="sr-only" id="contentanchor"></p> -->
 
