--- a/Nosotros.html
+++ b/Nosotros.html
@@ -212,12 +212,35 @@
 		<div class="header__line mx-3 mx-md-4"></div>
 	</header>
 
-		
+
+	<div class="landingbanner landingbanner--">
+		<div class="landingbanner__item textcolour--white">
+					<div class="landingbanner__background d-none d-md-block" style="background-image: url(&#39;./Images/mscship.webp&#39;);filter:brightness(50%)">
+					</div>
+	
+	
+				<div class="landingbanner__image landingbanner__image--mobile d-block d-md-none" style="background-image: url(&#39;./Images/mscship.webp&#39;)">
+				</div>
+	
+	
+			<div class="landingbanner__content px-lg-0 px-2 px-md-4">
+				<div class="container">
+					<div class="row">
+						<div class="col-md-7 col-12 landingbanner__content__text">
+								<h1>
+									Nosotros
+								</h1>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
 
 
 
 
-<div class="landingbanner landingbanner--">
+<!-- <div class="landingbanner landingbanner--">
        <div class="landingbanner__item">
                 <div class="landingbanner__background d-none d-md-block" style="background-image: url(&#39;./Images/mscship.webp&#39;)">
                 </div>
@@ -247,7 +270,7 @@
 	<div class="row">
 		<div class="col-12">
 			
-<!-- <div class="breadcrumb">
+<div class="breadcrumb">
     <ul class="breadcrumb__list">
             <li class="breadcrumb__item">
                 <a href="https://www.grosvenor.com/" class="breadcrumb__link">
@@ -260,11 +283,11 @@
                 </a>
             </li>
     </ul>
-</div> -->
+</div>
 
 		</div>
 	</div>
-</div>
+</div> -->
 
     <div>
         
@@ -282,7 +305,7 @@
 						<div class="OutlineElement Ltr BCX8 SCXW260282758">
 							<h4 class="Paragraph SCXW260282758 BCX8">
 								<span class="TextRun SCXW260282758 BCX8" data-contrast="none" lang="ES">
-									Muris Salinas Consultores es una distinguida firma de consultoría que se especializa en ofrecer asesoría y soluciones integrales en aduanas y comercio internacional. 
+							 	Muris Salinas Consultores es una distinguida firma de consultoría que se especializa en ofrecer asesoría y soluciones integrales en aduanas y comercio internacional. 
 								</span>
 							</h4>
 
