--- a/Contacto.html
+++ b/Contacto.html
@@ -240,6 +240,9 @@
         height:300px;
         width:100%;
     }
+    .textcolour--white{
+        border-color: #082657;
+    }
 </style>
 
  
