--- a/Nosotros.html
+++ b/Nosotros.html
@@ -219,7 +219,7 @@
 					</div>
 	
 	
-				<div class="landingbanner__image landingbanner__image--mobile d-block d-md-none" style="background-image: url(&#39;./Images/mscship.webp&#39;)filter:brightness(50%)">
+				<div class="landingbanner__image landingbanner__image--mobile d-block d-md-none" style="background-image: url(&#39;./Images/mscship.webp&#39;);filter:brightness(50%)">
 				</div>
 	
 	
