--- a/Ventajas.html
+++ b/Ventajas.html
@@ -666,7 +666,7 @@ Siguiendo esta filosofía de vida MSC ha superado grandes retos y llegado a mant
 <div class="contentlisting pb-3 pt-3 pb-md-5 pt-md-5 textcolour--white" style="background-color:#031b41">
     <div class="container">
 	<div class="row">
-			<div class="col-12  mb-md-7 mb-5 col-md-3 ">
+			<div class="col-12  mb-md-7 mb-5 col-md-4 ">
 						<div class="contentlisting__card" style="">
 
 
@@ -687,7 +687,7 @@ Siguiendo esta filosofía de vida MSC ha superado grandes retos y llegado a mant
 								
 						</div>
 							</div>
-			<div class="col-12  mb-md-7 mb-5 col-md-3 ">
+			<div class="col-12  mb-md-7 mb-5 col-md-4 ">
 				<div class="contentlisting__card" style="">
 						<div class="contentlisting__card__image mb-3" style="background-image:url(&#39;./Images/1520138508184.jpeg&#39;)">
 						</div>
@@ -705,7 +705,7 @@ Siguiendo esta filosofía de vida MSC ha superado grandes retos y llegado a mant
 							
 						</div>
 			</div>
-			<div class="col-12  mb-md-7 mb-5 col-md-3 ">
+			<div class="col-12  mb-md-7 mb-5 col-md-4 ">
 						<div class="contentlisting__card" style="">
 
 
@@ -732,60 +732,60 @@ Siguiendo esta filosofía de vida MSC ha superado grandes retos y llegado a mant
     </div>
 </div>
 
-<div class="contentlisting pb-3 pt-3 pb-md-5 pt-md-5 textcolour--white" style="background-color:#031b41">
+<div class="contentlisting pb-3 pb-md-5 textcolour--white" style="background-color:#031b41">
     <div class="container">
         <div class="row">
             <div class="col-12 mb-md-7 mb-5 col-md-4">
                 <div class="contentlisting__card">
                     <div class="contentlisting__card__title">
-                        <h5>SERVICIO DE CLASIFICACIÓN DE MERCANCÍAS</h5>
+                        <p>SERVICIO DE CLASIFICACIÓN DE MERCANCÍAS:</p>
                     </div>
                     <div class="contentlisting__card__content">
                         <p>Nuestro personal capacitado realiza una inspección y clasificación correcta de su mercancía.</p>
                     </div>
                     <div class="contentlisting__card__content">
                         <p>RELACIONES CON
-                            DEPENDENCIAS DE GOBIERNO: Las relaciones con las dependencias de gobierno nos permiten realizar sus trámites en tiempo y sin errores.</p>
+                            DEPENDENCIAS DE GOBIERNO: <br>Las relaciones con las dependencias de gobierno nos permiten realizar sus trámites en tiempo y sin errores.</p>
                     </div>
                     <div class="contentlisting__card__content">
                         <p>ACCESO A
-                            REPORTES: Ofrecemos acceso a reportes de sus operaciones desde que inicia la operación hasta que termina. Llevando un control historico de toda su información.</p>
+                            REPORTES: <br>Ofrecemos acceso a reportes de sus operaciones desde que inicia la operación hasta que termina. Llevando un control historico de toda su información.</p>
                     </div>
                 </div>
             </div>
             <div class="col-12 mb-md-7 mb-5 col-md-4">
                 <div class="contentlisting__card">
                     <div class="contentlisting__card__title">
-                        <h5>ASESORÍA EN CERTIFICADO DE ORIGEN</h5>
+                        <p>ASESORÍA EN CERTIFICADO DE ORIGEN:</p>
                     </div>
                     <div class="contentlisting__card__content">
                         <p>Se brinda asesoría clara y precisa en elaboración de certificado de origen.</p>
                     </div>
                     <div class="contentlisting__card__content">
                         <p>SERVICIO DE
-                            LOGISTICA: Ofrecemos el servicio de logística lo que nos permite coordinar operaciones agilizando procesos de despacho y entrega.</p>
+                            LOGISTICA: <br>Ofrecemos el servicio de logística lo que nos permite coordinar operaciones agilizando procesos de despacho y entrega.</p>
                     </div>
                     <div class="contentlisting__card__content">
                         <p>TECNOLOGÍA DE
-                            NETWORKING: Como parte de la filosofía innovadora de MSC, contamos con el servicio de NETWORKING, el cual permite a nuestros clientes enviar y recibir en tiempo real la documentación de sus operaciones (Pedimentos, facturas, BoL, expedientes, etc.) Evitando saturar correos y mejorando la comunicación oportuna.</p>
+                            NETWORKING: <br>Como parte de la filosofía innovadora de MSC, contamos con el servicio de NETWORKING, el cual permite a nuestros clientes enviar y recibir en tiempo real la documentación de sus operaciones (Pedimentos, facturas, BoL, expedientes, etc.) Evitando saturar correos y mejorando la comunicación oportuna.</p>
                     </div>
                 </div>
             </div>
             <div class="col-12 mb-md-7 mb-5 col-md-4">
                 <div class="contentlisting__card">
                     <div class="contentlisting__card__title">
-                        <h5>MANEJO DE MERCANCÍA</h5>
+                        <p>MANEJO DE MERCANCÍA:</p>
                     </div>
                     <div class="contentlisting__card__content">
                         <p>Error proofing, mediante código de barras</p>
                     </div>
                     <div class="contentlisting__card__content">
                         <p>REVISIÓN DE
-                            ORIGEN: Contar con oficinas en las principales aduanas de México, Laredo, Tx, E.U.A. Así como en China, nos da la pauta para hacer la inspección de origen y detectar cualquier anomalía antes de desaduanar.</p>
+                            ORIGEN: <br> Contar con oficinas en las principales aduanas de México, Laredo, Tx, E.U.A. Así como en China, nos da la pauta para hacer la inspección de origen y detectar cualquier anomalía antes de desaduanar.</p>
                     </div>
                     <div class="contentlisting__card__content">
                         <p>INFORMACIÓN DEL
-                            DOF: Estamos constantemente revisando el Diario Oficial de la Federación para detectar algun cambio de ley que afecte las operaciones.</p>
+                            DOF:<br> Estamos constantemente revisando el Diario Oficial de la Federación para detectar algun cambio de ley que afecte las operaciones.</p>
                     </div>
                 </div>
             </div>
