--- a/Certificaciones.html
+++ b/Certificaciones.html
@@ -250,7 +250,7 @@
 </div> -->
 
 <div class="landingbanner">
-    <div class="landingbanner__item">
+    <div class="landingbanner__item" style="height: 1080px;">
         <video class="banner__video d-md-block d-none" muted autoplay loop playsinline
         src="https://firebasestorage.googleapis.com/v0/b/mscwebsite-c49af.appspot.com/o/videomsc2022.mp4?alt=media&token=66a56a46-666b-4e33-9dfc-08a07560b260">
         </video>
