--- a/Nosotros.html
+++ b/Nosotros.html
@@ -219,8 +219,8 @@
 					</div>
 	
 	
-				<div class="landingbanner__image landingbanner__image--mobile d-block d-md-none" style="background-image: url(&#39;./Images/mscship.webp&#39;);filter:brightness(50%)">
-				</div>
+					<div class="landingbanner__image landingbanner__image--mobile d-block d-md-none" style="background-image: url('./Images/mscship.webp');filter:brightness(50%);height: 1080px;">
+					</div>
 	
 	
 			<div class="landingbanner__content px-lg-0 px-2 px-md-4">
