--- a/Precensia.html
+++ b/Precensia.html
@@ -221,7 +221,7 @@
                 </div>
 
 
-            <div class="landingbanner__image landingbanner__image--mobile d-block d-md-none" style="background-image: url(&#39;./Images/world_sharpened2.png&#39;)">
+            <div class="landingbanner__image landingbanner__image--mobile d-block d-md-none" style="background-image: url(&#39;./Images/world_sharpened2.png&#39;);filter:brightness(50%);height: 1080px;width:auto">
             </div>
 
 
