reportes en linea cnhg

--- a/Reportes_en_linea.html
+++ b/Reportes_en_linea.html
@@ -334,7 +334,7 @@
 
 
 
-<div class="textcolor--black" style="background-color: #ffcd37">
+<div class="textcolor--black" style="background-color: #e7d95a">
     <style>
         #contentlisting-7cb66189-e957-4c8f-b1c5-e74c2be2835e .contentlisting__card {
             background-color: #6daef3; /* Blue */
