banner changes (aspect ratio=1) & black bars change

--- a/Aduanas.html
+++ b/Aduanas.html
@@ -281,6 +281,7 @@ function closeMenu() {
             }
         
             .landingbanner__background, .landingbanner__image--mobile {
+                aspect-ratio: 1;
                 background-size: 100% 100%; /* Cover the area of the container */
                 background-position: center; /* Center the image */
                 background-repeat: no-repeat; /* Do not repeat the image */
