--- a/Nosotros.html
+++ b/Nosotros.html
@@ -244,6 +244,7 @@
     }
 
     .landingbanner__background, .landingbanner__image--mobile {
+        aspect-ratio: 1;
         background-size: 100% 100%; /* Cover the area of the container */
         background-position: center; /* Center the image */
         background-repeat: no-repeat; /* Do not repeat the image */
