--- a/Reportes_en_linea.html
+++ b/Reportes_en_linea.html
@@ -269,6 +269,7 @@ function closeMenu() {
     }
 
     .landingbanner__background, .landingbanner__image--mobile {
+        aspect-ratio: 1;
         background-size: 100% 100%; /* Cover the area of the container */
         background-position: center; /* Center the image */
         background-repeat: no-repeat; /* Do not repeat the image */
