--- a/Home.html
+++ b/Home.html
@@ -1148,7 +1148,7 @@ Championing climate action with our global carbon commitment                    
                     </div>
 
 
-                <div class="pt-2 pr-2 pb-6 pl-3 pb-md-2 pt-md-4 px-md-7">
+                <div class="pt-2 pr-2 pb-6 pb-md-2 pt-md-4 px-md-7">
                     <h3>
 
                         Seguimiento a embarques
